grammar.js
    program: ($) => seq(repeat($._line), optional($._line_content)),

    _line: ($) => seq(optional($._line_content), $._newline),

    // Parser comments are recognized only at the lowest `&` precedence. They
    // may begin a physical line or follow `&`. The low-precedence `@` prefix
    // also recurses into this level. Direct IF/FOR bodies and operands of
    // `||`, `&&`, or `|` cannot consume a colon comment.
    _line_content: ($) => choice($._statement, $.label, $.colon_comment),

    _newline: ($) => token(/\r?\n/),

    // ---------------------------------------------------------------------
    // Statements and the command-operator ladder.
    // ---------------------------------------------------------------------
    _statement: ($) =>
      choice(
        $._unit,
        $.seq_list,
        $.or_list,
        $.and_list,
        $.pipeline,
      ),

    seq_list: ($) =>
      prec.left(
        PREC.SEQ,
        seq(
          field('left', $._statement),
          '&',
          optional(
            field('right', choice($._statement, $.colon_comment)),
          ),
        ),
      ),

    or_list: ($) =>
      prec.left(
        PREC.OR,
        seq(field('left', $._statement), '||', field('right', $._statement)),
      ),

    and_list: ($) =>
      prec.left(
        PREC.AND,
        seq(field('left', $._statement), '&&', field('right', $._statement)),
      ),

    pipeline: ($) =>
      prec.left(
        PREC.PIPE,
        seq(field('left', $._statement), '|', field('right', $._statement)),
      ),

    // A statement unit is a leaf command form or a low-precedence `@` wrapper.
    quiet_statement: ($) =>
      prec.right(
        PREC.QUIET,
        seq(
          field('quiet', $.quiet),
          choice(
            field('body', choice($._statement, $.colon_comment)),
            $._missing_quiet_body,
          ),
        ),
      ),

    // A parenthesised compound. Newlines inside act like `&`. Redirections may
    // appear before or after the block. The parentheses are supplied by the
    // external scanner (which tracks block vs literal-paren nesting), so
    // `echo (text)` is literal but `( echo a )` is a block.
    block: ($) =>
      prec.right(
        seq(
          repeat(redirected($)),
          choice(
            seq(
              alias($._empty_block_open, '('),
              repeat($._newline),
              alias($._block_body_boundary, '_body_boundary'),
              $._empty_block_missing_name,
              alias($._block_close, ')'),
            ),
            seq(
              alias($._block_open, '('),
              optional($._block_body),
              alias($._block_close, ')'),
            ),
          ),
          repeat(redirected($)),
        ),
      ),
    _block_body: ($) =>
      seq(
        repeat($._newline),
        $._line_content,
        repeat(seq(repeat1($._newline), $._line_content)),
        repeat($._newline),
      ),
    // Keep the invalid block visible without synthesizing a normal `command`.
    // The preceding boundary makes the missing name local to this block.
    _empty_block_missing_name: ($) => alias($._cmd_text, $.command_name),
    command: ($) =>
      prec.right(
        PREC.COMMAND,
        seq(
          repeat(redirected($)),
          field('name', $.command_name),
          repeat(
            choice(
              field('argument', $.argument),
              redirected($),
            ),
          ),
        ),
      ),

    // The `@` echo-suppress prefix.
    quiet: ($) => '@',

    // ---------------------------------------------------------------------
    // Control flow — IF
    // ---------------------------------------------------------------------
    // IF [/I] [NOT] <condition> <command> [ELSE <command>]
    if_statement: ($) =>
      prec.right(
        seq(
          kw($, 'if'),
          optional($._standard_separator),
          optional(
            seq(
              // Unlike SET/FOR options, `/I` competes with a valid comparison
              // operand in this slot. Keep it at ordinary lexical precedence
              // so a longer operand such as `/ileft` wins as one word.
              alias(ci('/i'), $.if_flag),
              $._required_standard_separator,
            ),
          ),
          optional(
            seq(
              alias(ci('not'), $.not),
              $._required_standard_separator,
            ),
          ),
          field('condition', $._if_condition),
          // cmd parses the rest of each branch through its operator ladder.
          // `prec.right` keeps a following ELSE attached to this IF.
          choice(
            field('consequence', $._statement),
            $._missing_consequence,
          ),
          optional(
            seq(
              // Ordinary command text wins until the consequence has ended.
              // A block closes that tail and leaves ELSE available here.
              alias(token(prec(-1, new RegExp(ciSource('else')))), $.keyword),
              $._else_boundary,
              choice(
                field('alternative', $._statement),
                $._missing_alternative,
              ),
            ),
          ),
        ),
      ),

    _if_condition: ($) => choice($.comparison, $.unary_condition),

    unary_condition: ($) =>
      seq(
        field(
          'kind',
          alias(
            choice(ci('exist'), ci('defined'), ci('errorlevel'), ci('cmdextversion')),
            $.condition_keyword,
          ),
        ),
        $._required_standard_separator,
        field('argument', $._if_operand),
      ),

    // An IF operand is a word whose bare text stops at `=` so that `a==b`
    // tokenises as `a`, `==`, `b`. It may also be fully wrapped in parentheses,
    // the classic `if (%1)==()` idiom for tolerating empty/odd arguments.
    _if_operand: ($) =>
      choice(
        alias($._if_word, $.argument),
        alias($._parenthesized_if_operand, $.argument),
      ),
    for_statement: ($) =>
      prec.right(
        seq(
          kw($, 'for'),
          optional($._standard_separator),
          optional(
            seq(
              field('option', $.for_option),
              $._required_standard_separator,
            ),
          ),
          field('variable', $._loop_variable_declaration),
          $._required_standard_separator,
          kw($, 'in'),
          optional($._standard_separator),
          alias($._block_open, '('),
          field('set', optional($.for_set)),
          alias($._block_close, ')'),
          optional($._standard_separator),
          kw($, 'do'),
          // Operators after DO remain inside the loop body.
          choice(
            field('body', $._statement),
            $._missing_for_body,
          ),
        ),
      ),

    // An absent controller or quiet-statement body retains only Tree-sitter's
    // anonymous MISSING command in the CST. The boundary markers are
    // implementation terminals.
    _missing_consequence: ($) =>
      seq(
        alias($.body_boundary, '_body_boundary'),
        alias($.body_boundary_again, '_body_boundary'),
        field('consequence', alias($._command_start, 'command')),
      ),
    _missing_alternative: ($) =>
      seq(
        alias($.body_boundary, '_body_boundary'),
        alias($.body_boundary_again, '_body_boundary'),
        field('alternative', alias($._command_start, 'command')),
      ),
    _missing_for_body: ($) =>
      seq(
        alias($.body_boundary, '_body_boundary'),
        alias($.body_boundary_again, '_body_boundary'),
        field('body', alias($._command_start, 'command')),
      ),
    _missing_quiet_body: ($) =>
      seq(
        alias($.body_boundary, '_body_boundary'),
        alias($.body_boundary_again, '_body_boundary'),
        field('body', alias($._command_start, 'command')),
      ),

    // FOR options. `/R [path]` and `/F [options]` each take one optional word.
    // `/D /R [path]`, pathless `/R /D`, and `/R path /D` are valid. Windows
    // rejects `/R /D path`: in that order the root cannot follow `/D`. No other
    // mixed switch set is valid. The optional argument cannot start with `/`,
    // which keeps an illegal second switch from becoming an `/F` option or an
    // ordinary `/R` path.
    // The argument may be quoted (`/f "tokens=2 delims=,"`) or caret-escaped and
    // unquoted (`/f tokens^=2-5^ delims^=.-_`).
    for_set: ($) =>
      repeat1(
        choice(
          alias($._standard_argument, $.argument),
          $._standard_separator,
          $._newline,
        ),
      ),

    // ---------------------------------------------------------------------
    // GOTO / CALL
    // ---------------------------------------------------------------------
    // GOTO label  /  GOTO :EOF. The target is the rest of the command up to a
    // cmd operator or redirection. Spaces may be part of a label name. A colon
    // or standard separator ends the lookup name, but its ignored suffix stays
    // in the CST as label text. cmd removes redirections before interpreting
    // that target, so preserve them before the keyword and around the target.
    goto_statement: ($) =>
      prec.right(
        seq(
          repeat(redirected($)),
          kw($, 'goto'),
          optional($._standard_separator),
          repeat(redirected($)),
          field('target', $.label_reference),
          repeat(redirected($)),
        ),
      ),

    label_reference: ($) =>
      choice(
        seq(
          optional($._label_reference_prefix),
          field(
            'name',
            alias($._label_reference_name, $.label_name),
          ),
          repeat(
            seq(
              repeat1(field('redirect', $._redirection)),
              field('name', alias($._label_reference_name, $.label_name)),
            ),
          ),
          optional($._label_reference_ignored_tail),
        ),
        seq(
          optional($._label_reference_prefix),
          repeat(
            seq(
              field('name', alias($._label_reference_name, $.label_name)),
              repeat1(field('redirect', $._redirection)),
            ),
          ),
          field('name', alias($._label_reference_quoted_prefix, $.label_name)),
          alias($._label_reference_quoted_tail, $.label_text),
          repeat(
            seq(
              repeat1(field('redirect', $._redirection)),
              alias($._label_reference_ignored_text, $.label_text),
            ),
          ),
        ),
        // Keep an empty or doubly-prefixed target, such as `goto ::name`, as a
        // target without inventing a resolvable label name.
        seq(
          ':',
          optional($._label_reference_ignored_tail),
        ),
      ),
    _label_reference_prefix: ($) =>
      seq(':', optional(token.immediate(/[ \t]+/))),
    _label_reference_name: ($) =>
      repeat1(
        choice(
          $._label_reference_text,
          alias($._label_reference_quoted_name, $.string),
          $._escape_fragment,
          alias($._caret_escape, $.escape_sequence),
          $._expansion,
          $._stray_sigil,
        ),
      ),
    // Quotes protect outer operators, but GOTO still stops lookup at its own
    // delimiters. A split quoted span keeps the name and ignored text separate.
    _label_reference_quoted_prefix: ($) =>
      seq(optional($._label_reference_name), '"', repeat($._label_reference_quoted_content)),
    _label_reference_quoted_tail: ($) =>
      seq(
        token.immediate(/[ \t:+;,=]/),
        repeat($._string_part),
        $._string_end,
        repeat($._label_reference_ignored_word),
      ),
    _label_reference_ignored_tail: ($) =>
      seq(
        repeat(field('redirect', $._redirection)),
        alias($._label_reference_tail, $.label_text),
        repeat(
          seq(
            repeat1(field('redirect', $._redirection)),
            alias($._label_reference_ignored_text, $.label_text),
          ),
        ),
      ),
    _label_reference_ignored_text: ($) =>
      repeat1($._label_reference_ignored_word),
    set_statement: ($) =>
      prec.right(
        seq(
          repeat(redirected($)),
          kw($, 'set'),
          // Redirections before the payload remain statement children. Once a
          // SET branch starts, that branch keeps later redirections in source
          // order with the surrounding payload fragments.
          optional(
            choice(
              $._set_payload,
              seq(
                repeat1(field('redirect', $._redirection)),
                $._set_payload,
              ),
            ),
          ),
          // Keep terminal redirections on the statement, matching the existing
          // CST. Branch rules consume a redirection only when more payload
          // follows it.
          repeat(field('redirect', $._redirection)),
        ),
      ),
    _set_payload: ($) =>
      choice(
        $.set_prompt,
        $.set_arith,
        $.set_assignment,
        $.set_quoted,
        $.set_display,
      ),

    // SET name=value  (the value is the rest of the logical line)
    set_arith: ($) =>
      seq(
        alias(opt('/a'), $.set_flag),
        repeat1(
          choice(
            field('expression', $.argument),
            seq(
              repeat1(field('redirect', $._redirection)),
              field('expression', $.argument),
            ),
          ),
        ),
      ),
    // SET "name=value". Keep the binding fields visible instead of hiding the
    // assignment in a generic string. Earlier quotes remain value text and the
    // SET-specific terminator leaves the final quote as the wrapper close.
    // A caret-escaped opening quote is a literal during outer tokenization.
    // Keep that SET payload as ordinary fragments so operators, redirections,
    // and expansions retain their outer syntax roles.
    _redirection: ($) => choice($.redirect_file, $.redirect_dup),

    // `>`, `>>`, `<`, with an optional immediately-preceding source fd digit.
    // The external source token only matches a digit whose next byte is the
    // operator. The immediate operator branch then preserves that adjacency.
    redirect_file: ($) =>
      choice(
        seq(
          field(
            'source',
            alias($._redirect_source, $.file_descriptor),
          ),
          field(
            'operator',
            alias(token.immediate(/>>|>|</), $.redirect_operator),
          ),
          $._redirect_file_target,
        ),
        seq(
          field('operator', $.redirect_operator),
          $._redirect_file_target,
        ),
      ),
    redirect_operator: ($) => token(/>>|>|</),
    _redirect_file_target: ($) =>
      seq(
        optional($._standard_separator),
        field('target', alias($._redirect_argument, $.argument)),
      ),
    redirect_dup_operator: ($) => token(/[<>]&/),
    file_descriptor: ($) => token.immediate(/[0-9]/),

    // ---------------------------------------------------------------------
    // Words: command names and arguments are runs of adjacent fragments.
    // ---------------------------------------------------------------------
    command_name: ($) =>
      standardWordOf($, $._cmd_lead, $._standard_fragment),

    // The first fragment of a command name may not begin with `@` (quiet) or
    // `:` (label). A lone `%`/`!` sigil can also lead a name: cmd happily parses
    // `! echo ...` as a command named `!` (it fails at runtime — a common
    // debug-disable trick), and `%`/`!` only form an expansion when they pair up.
    _standard_argument: ($) => standardWordOf($, $._standard_fragment),
    _required_standard_separator: ($) =>
      token.immediate(prec(3, /[ \t,;=]+/)),
    _standard_separator: ($) =>
      token(prec(2, /[,;=](?:[ \t]*[,;=])*/)),
    text: ($) => token(/[^ \t\r\n&|<>()^"%!]+/),
    string: ($) => seq('"', repeat($._string_part), $._string_end),
