test/corpus/labels.txt
====================
simple label
====================

:start

---

(program
  (label
    name: (label_name)))

=============================
label with leading colon name
=============================

:my_label

---

(program
  (label
    name: (label_name)))

========================
eof label as goto target
========================

goto :eof

---

(program
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name))))

====================
numeric label
====================

:1
goto 1

---

(program
  (label
    name: (label_name))
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name))))

============================================================
GOTO target is segmented around redirections
============================================================

goto foo>nul bar
goto foo 2>nul bar
goto foo>nul bar>err baz

---

(program
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      name: (label_name)))
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name)
      redirect: (redirect_file
        source: (file_descriptor)
        operator: (redirect_operator)
        target: (argument
          (text)))
      name: (label_name)))
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      name: (label_name)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      name: (label_name))))

============================================================
GOTO ignored text continues around redirections
============================================================

goto foo;ignored>nul more
goto foo>nul ;ignored>err more
goto ::skip>nul later

---

(program
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name)
      (label_text)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      (label_text)))
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      (label_text)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      (label_text)))
  (goto_statement
    (keyword)
    target: (label_reference
      (label_text)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      (label_text))))

============================================================
GOTO ignored suffix keeps quotes and escapes
============================================================

goto foo;ignored>nul ^&echo after
goto foo;ignored>nul "a&b"
goto foo;ignored>nul ^
&echo after

---

(program
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name)
      (label_text)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      (label_text
        (escape_sequence))))
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name)
      (label_text)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      (label_text
        (string))))
  (goto_statement
    (keyword)
    target: (label_reference
      name: (label_name)
      (label_text)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      (label_text
        (escape_sequence)))))

============================================================
GOTO tail descriptors follow CMD token separators
============================================================

goto foo+2>err
goto foo+ 2>err
goto foo;2>err
goto foo=2>err
goto foo,2>err
goto foo:2>err
goto foo+ignored;2>err

---

(program
  (goto_statement
    (keyword)
    (label_reference
      (label_name)
      (label_text))
    (redirect_file
      (redirect_operator)
      (argument
        (text))))
  (goto_statement
    (keyword)
    (label_reference
      (label_name)
      (label_text))
    (redirect_file
      (file_descriptor)
      (redirect_operator)
      (argument
        (text))))
  (goto_statement
    (keyword)
    (label_reference
      (label_name)
      (label_text))
    (redirect_file
      (file_descriptor)
      (redirect_operator)
      (argument
        (text))))
  (goto_statement
    (keyword)
    (label_reference
      (label_name)
      (label_text))
    (redirect_file
      (file_descriptor)
      (redirect_operator)
      (argument
        (text))))
  (goto_statement
    (keyword)
    (label_reference
      (label_name)
      (label_text))
    (redirect_file
      (file_descriptor)
      (redirect_operator)
      (argument
        (text))))
  (goto_statement
    (keyword)
    (label_reference
      (label_name)
      (label_text))
    (redirect_file
      (redirect_operator)
      (argument
        (text))))
  (goto_statement
    (keyword)
    (label_reference
      (label_name)
      (label_text))
    (redirect_file
      (file_descriptor)
      (redirect_operator)
      (argument
        (text)))))
