test/corpus/recovery.txt
==========================================
dangling redirect recovers at next command
==========================================

echo before >
echo after

---

(program (command name: (command_name) argument: (argument (text))) (ERROR (redirect_operator)) (command name: (command_name) argument: (argument (text))))

====================================================
invalid duplication target remains parser recovery
====================================================

cmd 2>&x
echo tail

---

(program
  (command
    name: (command_name))
  (ERROR
    (file_descriptor)
    (redirect_dup_operator))
  (command
    name: (command_name)
    argument: (argument
      (text))))

======================================
unclosed block records missing delimiter
======================================

(
echo before

---

(program
  (block
    (command
      name: (command_name)
      argument: (argument
        (text)))
    (MISSING ")")))

==================================================
empty command blocks retain missing content locally
==================================================

()
( )
(
)
(())
echo after

---

(program
  (block
    (MISSING command_name))
  (block
    (MISSING command_name))
  (block
    (MISSING command_name))
  (block
    (block
      (MISSING command_name)))
  (command
    name: (command_name)
    argument: (argument
      (text))))

================================================
empty command blocks remain invalid as body nodes
================================================

if exist marker ()
for %%i in (x) do ()
@()
echo after

---

(program
  (if_statement
    (keyword)
    condition: (unary_condition
      kind: (condition_keyword)
      argument: (argument
        (text)))
    consequence: (block
      (MISSING command_name)))
  (for_statement
    (keyword)
    variable: (loop_variable_declaration)
    (keyword)
    set: (for_set
      (argument
        (text)))
    (keyword)
    body: (block
      (MISSING command_name)))
  (quiet_statement
    quiet: (quiet)
    body: (block
      (MISSING command_name)))
  (command
    name: (command_name)
    argument: (argument
      (text))))

================================================
empty nested block keeps enclosing operator scope
================================================

(() & echo x)

---

(program
  (block
    (seq_list
      left: (block
        (MISSING command_name))
      right: (command
        name: (command_name)
        argument: (argument
          (text))))))

============================================================
malformed IF stays on its line beside concatenated fragments
============================================================

if == echo pre%VAR%post
echo after

---

(program
  (ERROR
    (keyword)
    (ERROR
      (text))
    (argument
      (text)
      (variable)
      (text)))
  (command
    name: (command_name)
    argument: (argument
      (text))))

============================================
unterminated string recovery ends at newline
============================================

|| echo "unterminated
echo after

---

(program
  (ERROR)
  (command
    name: (command_name)
    argument: (argument
      (string)))
  (command
    name: (command_name)
    argument: (argument
      (text))))

===============================================
unmatched close does not change later block depth
===============================================

)
(
  echo inside
)
echo after

---

(program
  (ERROR
    (UNEXPECTED ')'))
  (block
    (command
      name: (command_name)
      argument: (argument
        (text))))
  (command
    name: (command_name)
    argument: (argument
      (text))))

===========================================
malformed statement keeps block close local
===========================================

(
if
)
echo after

---

(program
  (block
    (ERROR
      (keyword)))
  (command
    name: (command_name)
    argument: (argument
      (text))))

=======================================================
incomplete control flow does not consume the next line
=======================================================

if exist marker
echo after-if
for %%i in (one) do
echo after-for
if exist marker (echo yes) else
echo after-else

---

(program
  (if_statement
    (keyword)
    condition: (unary_condition
      kind: (condition_keyword)
      argument: (argument
        (text)))
    consequence: (MISSING "command"))
  (command
    name: (command_name)
    argument: (argument
      (text)))
  (for_statement
    (keyword)
    variable: (loop_variable_declaration)
    (keyword)
    set: (for_set
      (argument
        (text)))
    (keyword)
    body: (MISSING "command"))
  (command
    name: (command_name)
    argument: (argument
      (text)))
  (if_statement
    (keyword)
    condition: (unary_condition
      kind: (condition_keyword)
      argument: (argument
        (text)))
    consequence: (block
      (command
        name: (command_name)
        argument: (argument
          (text))))
    (keyword)
    alternative: (MISSING "command"))
  (command
    name: (command_name)
    argument: (argument
      (text))))

==================================================
incomplete control flow at EOF retains error state
==================================================

if exist marker

---

(program
  (if_statement
    (keyword)
    condition: (unary_condition
      kind: (condition_keyword)
      argument: (argument
        (text)))
    consequence: (MISSING "command")))

==================================================
incomplete FOR body at EOF retains error state
==================================================

for %%i in (one) do

---

(program
  (for_statement
    (keyword)
    variable: (loop_variable_declaration)
    (keyword)
    set: (for_set
      (argument
        (text)))
    (keyword)
    body: (MISSING "command")))

==================================================
incomplete quiet statement stays on its own line
==================================================

@
echo after

---

(program
  (quiet_statement
    quiet: (quiet)
    body: (MISSING "command"))
  (command
    name: (command_name)
    argument: (argument
      (text))))

==============================================
PowerShell-shaped closer keeps recovery state
==============================================

#>

---

(program
  (command
    name: (command_name))
  (ERROR
    (redirect_operator)))

=====================================================
empty SET /A payload retains parser recovery
=====================================================

set /a
set /a >out.txt

---

(program
  (set_statement
    (keyword))
  (ERROR
    (set_flag))
  (set_statement
    (keyword)
    (set_arith
      (set_flag)
      redirect: (redirect_file
        operator: (redirect_operator)
        target: (argument
          (text)))
      expression: (argument
        (MISSING text)))))

============================================================
incomplete SET /P name keeps redirect outside variable range
============================================================

set /p na>out

---

(program (set_statement (keyword)) (ERROR (set_flag) (variable_name) (redirect_file operator: (redirect_operator) target: (argument (text)))))
